# generative-models-pytorch

./: .gitignore  README.md  pyproject.toml
notebooks/: gan.ipynb
src/generative_models_pytorch/: cli.py  gan.py  mnist.py  vae.py  wgan.py
tests/: test_generative_models_pytorch.py
