[tool.poetry]
name = "generative-models-pytorch"
version = "0.1.0"
description = ""
authors = ["Catminusminus <getomya@svk.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
tqdm = "^4.64.0"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
